# pingpong

./: .clang-format  .gitignore  CMakeLists.txt  README.md  shell.nix
client/: CMakeLists.txt
client/src/: client.cpp
filetransmission/: CMakeLists.txt
filetransmission/ppclient/: CMakeLists.txt
filetransmission/ppclient/src/: client.cpp  client.hpp  discovery_client.cpp  discovery_client.hpp  main.cpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp  unix_ip_utils.cpp  unix_ip_utils.hpp
filetransmission/ppcommon/: CMakeLists.txt
filetransmission/ppcommon/include/ppcommon/: hash.hpp  ppcommon.hpp  session.hpp
filetransmission/ppgenerator/: CMakeLists.txt
filetransmission/ppgenerator/include/ppgenerator/: phrase_generator.hpp
filetransmission/ppgenerator/src/: phrase_generator.cpp
filetransmission/ppserver/: CMakeLists.txt
filetransmission/ppserver/doc/: file_transmition.drawio
filetransmission/ppserver/src/: discovery_server.cpp  discovery_server.hpp  server.cpp
logger/: CMakeLists.txt
logger/include/logger/: logger.hpp
net_common/: CMakeLists.txt
net_common/include/net_common/: net_client.hpp  net_common.hpp  net_connection.hpp  net_message.hpp  net_server.hpp
server/: CMakeLists.txt
server/src/: server.cpp
src/: boostasio_sample.cpp  main.cpp
tsqueue/: CMakeLists.txt
tsqueue/include/tsqueue/: tsqueue.hpp
